# valteroignat-dotcom-fiverr-order-bot

./: .env.example  .gitignore  README.md  bot.py  config.py  database.py  keyboards.py  models.py  requirements.txt
cpp_scoring/: CMakeLists.txt  README.md  main.cpp
handlers/: analyze.py  help.py  profile.py  search.py  start.py
prompts/: analyze_order_prompt.txt  proposal_prompt.txt
services/: fiverr_keywords.py  llm.py  scoring.py
